@@ -1,3 +1,8 @@
+2006-04-26  Matthias Wimmer  <m@tthias.eu>
+
+    * xdb_sql/xdb_sql.c: allowing to have multiple <query/>, <delete/>,
+    	and <set/> elements in a sql handler definition
+
 2006-04-25  Matthias Wimmer  <m@tthias.eu>
 
     * xdb_sql/xdb_sql.c: fixed reestablishing of mysql server connections
